<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupWindow"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="What would you like to do?" />

    <Button
        android:id="@+id/btnPresent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_present" >
    </Button>

    <Button
        android:id="@+id/btnAbsent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_absent" >
    </Button>

    <Button
        android:id="@+id/btnSupporting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_supporter" >
    </Button>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancel" >
    </Button>

</LinearLayout>