<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupWindow"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/upload" >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera" >
        </Button>

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery" >
        </Button>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

</LinearLayout>