<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/training_header_bar"
        android:gravity="center_vertical"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:weightSum="100" >

        <com.teamapp.ui.FlipButton
            android:id="@+id/btnClub"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="20"
            android:text="@string/club" />

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="2dp"
            android:text="@string/msg_header"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Body View -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dp" >

        <LinearLayout style="@style/body_layout" >

            <Button
                android:id="@+id/btnPlayers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/msg_team" >
            </Button>

            <Button
                android:id="@+id/btnCaptains"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/msg_captain" >
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>