<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <!-- Header View -->

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/header_bar" >

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- Body View -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <LinearLayout
            android:id="@+id/bodyLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/rounded_border"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/txtLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/login_title"
                    android:textColor="@color/dkgray"
                    android:textSize="12sp" >
                </TextView>

                <EditText
                    android:id="@+id/txtEmailId"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username"
                    android:inputType="textEmailAddress"
                    android:text="" >
                </EditText>

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:text="" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/btnLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/login_login" >
                    </Button>

                    <Button
                        android:id="@+id/btnFAQ"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/login_faq" >
                    </Button>
                </LinearLayout>

                <Button
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:text="@string/login_forgot_password" >
                </Button>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_register_title"
                    android:textColor="@color/dkgray"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:text="@string/login_register" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>