<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/training_header_bar"
        android:gravity="center_vertical"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:weightSum="100" >

        <com.teamapp.ui.FlipButton
            android:id="@+id/btnTeam"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="20"
            android:text="@string/team" />

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="58"
            android:gravity="center"
            android:text="@string/clubden"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="21"
            android:text="@string/search" />
    </LinearLayout>

    <!-- Body View -->

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        layout="@layout/rounded_border_list_view" />

</LinearLayout>