<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/body_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/training_header_bar"
        android:gravity="center_vertical"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:weightSum="100" >

        <com.teamapp.ui.FlipButton
            android:id="@+id/btnClub"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="20"
            android:text="@string/club" />

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="2dp"
            android:text="@string/results_header"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spnSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <include
        android:id="@+id/lstGames"
        layout="@layout/list_view" />

</LinearLayout>